brat/test/golden/error/simpleterm.brat.golden
Error in test/golden/error/simpleterm.brat on line 2:
simple = true
         ^^^^

  "true" is not a valid constructor for type Nat

